# epub-to-obsidian

./: .gitignore  README.md  debug_epub.py  pyproject.toml  test_conversion.py
scripts/: example_conversion.py
src/epub_to_obsidian/: cli.py  epub_parser.py  markdown_converter.py  obsidian_writer.py
