[project]
name = "epub-to-obsidian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pascal Kraus", email = "pascal98kraus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "ebooklib>=0.19",
    "markitdown>=0.1.3",
    "typer>=0.19.2",
]

[project.scripts]
epub-to-obsidian = "epub_to_obsidian:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
